# python-contentdesk-report

./: .env  .gitignore  Readme.md  pyproject.toml
.github/workflows/: python-test-publish.yml
src/contentdeskreport/: __init__.py
src/contentdeskreport/check/: checkUrl.py  checkUrlExist.py  checkUrlValid.py  checks.py
src/contentdeskreport/extract/: extract.py
src/contentdeskreport/load/: load.py
src/contentdeskreport/transform/: transform.py
