[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contentdeskreport"
version = "0.0.2"
authors = [
  { name="Thomas Solenthaler" },
]
description = "A small package for Contentdesk Report Portal"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tsolenthaler/python-contentdesk-report"
"Bug Tracker" = "https://github.com/tsolenthaler/python-contentdesk-report/issues"